--- a/src/App.scss
+++ b/src/App.scss
@@ -1341,6 +1341,42 @@ $pixels: (
     display: none;
 }
 
+.loadingSmall {
+    box-sizing: border-box;
+    height: fit-content;
+    width: 100%;
+    margin: 10px 0;
+    padding: 50px 0;
+    border-radius: 3px;
+    border: 1px solid lightgray;
+    background-color: #FFFFFF30;
+    
+    .loadingSmall__p {
+        width: 100%;
+        margin-bottom: 10px;
+        font-size: 25px;
+        font-weight: 900;
+        text-align: center;
+        letter-spacing: 10px;
+    }
+
+    .loadingSmall__p--small {
+        width: 100%;
+        margin-bottom: 10px;
+        font-size: 18px;
+        font-weight: 300;
+        text-align: center;
+    }
+
+    .loadingSmall__i {
+        width: 100%;
+        margin-top: 15px;
+        font-size: 50px;
+        animation: 2s loadingSpin infinite linear;
+        text-align: center;
+    }
+}
+
 @media only screen and (max-width: 500px) {
     .footer {
         .footer__con {
@@ -1390,5 +1426,14 @@ $pixels: (
     }
     100% {
         background-color: $font-color-secondary;
+    }
+}
+
+@keyframes loadingSpin {
+    0% {
+        transform: rotate(0deg);
+    }
+    100% {
+        transform: rotate(360deg);
     }
 }
