--- a/src/App.scss
+++ b/src/App.scss
@@ -335,6 +335,7 @@ $pixels: (
     max-width: 1100px;
     margin: auto;
     background-color: transparent;
+    -webkit-backdrop-filter: blur(5px);
     display: flex;
     flex-direction: column;
 
@@ -343,7 +344,7 @@ $pixels: (
         margin-bottom: 15px;
         padding-top: 10px;
         padding-bottom: 10px;
-        border-bottom: 1px solid $font-color-secondary;
+        //border-bottom: 1px solid $font-color-secondary;
         font-size: 25px;
         font-weight: 300;
         color: $font-color-secondary;
@@ -471,12 +472,16 @@ $pixels: (
         height: fit-content;
         width: 100%;
         color: $font-color-secondary;
+        display: grid;
+        grid-template-columns: 1fr 1fr;
+        grid-gap: 10px;
+        justify-content: center;
 
         .projectCard {
             box-sizing: border-box;
-            height: fit-content;
+            height: 100%;
             width: 100%;
-            margin: 15px auto;
+            //margin: 15px auto;
             border-radius: 5px;
             border: 1px solid #22222250;
             backdrop-filter: blur(0.5px);
@@ -560,6 +565,7 @@ $pixels: (
             .projectCard__img {
                 box-sizing: border-box;
                 width: 100%;
+                border-radius: 3.8px 3.8px 0 0;
             }
 
             .projectCard__descriptions {
@@ -685,6 +691,37 @@ $pixels: (
                     background-color: $font-color-secondary;
                     color: white;
                 }
+            }
+        }
+
+        .projectMore {
+            box-sizing: border-box;
+            height: 100%;
+            width: 100%;
+            padding: 50px 0;
+            border-radius: 5px;
+            background-color: $font-color-secondary;
+            color: white;
+            display: flex;
+            flex-direction: column;
+            justify-content: center;
+            align-items: center;
+
+            .projectMore__i {
+                font-size: 75px;
+                margin-bottom: 20px;
+            }
+
+            .projectMore__h2 {
+                font-size: 65px;
+                font-weight: 900;
+                letter-spacing: -2px;
+            }
+
+            .projectMore__p {
+                font-size: 30px;
+                font-weight: 700;
+                letter-spacing: 2px;
             }
         }
     }
@@ -1377,7 +1414,18 @@ $pixels: (
     }
 }
 
+@media only screen and (max-width: 600px) {
+
+    .projects {
+        .projectCardsCon {
+            display: grid;
+            grid-template-columns: 1fr;
+        }
+    }
+}
+
 @media only screen and (max-width: 500px) {
+
     .footer {
         .footer__con {
             display: flex;
